fix(security): fix security matcher